[project]
name = "project-name"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "debugpy",
  "fastapi>=0.129.0",
  "langchain>=1.2.10",
  "langchain-ollama>=1.0.1",
  "langchain-openai>=1.1.9",
  "private-packaging",
  "pypacking",
  "uvicorn>=0.40.0",
]

[tool.pyright]
include = [ "src" ]

[tool.poetry]
package-mode = false

[tool.uv.sources]
pypacking = { git = "https://github.com/relief-melone/playground-python-packaging.git" }
private-packaging = { git = "ssh://git@github.com/relief-melone/playground-python-packaging-private.git" }


